# coral

./: .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENCE.txt  README.md  index.html  vcpkg-deps.txt  vcpkg-test-deps.txt
0.7/: annotated.html  async_8hpp.html  async_8hpp_source.html  classcoral_1_1async_1_1_comm_thread-members.html  classcoral_1_1async_1_1_comm_thread.html  classcoral_1_1async_1_1_comm_thread_dead-members.html  classcoral_1_1async_1_1_comm_thread_dead.html  classcoral_1_1bus_1_1_execution_manager-members.html  classcoral_1_1bus_1_1_execution_manager.html  classcoral_1_1bus_1_1_execution_manager_private-members.html  classcoral_1_1bus_1_1_execution_manager_private.html  classcoral_1_1bus_1_1_execution_state-members.html  classcoral_1_1bus_1_1_execution_state.html  classcoral_1_1bus_1_1_i_slave_control_messenger-members.html  classcoral_1_1bus_1_1_i_slave_control_messenger.html  classcoral_1_1bus_1_1_pending_slave_control_connection-members.html  classcoral_1_1bus_1_1_pending_slave_control_connection.html  classcoral_1_1bus_1_1_shutdown-members.html  classcoral_1_1bus_1_1_shutdown.html  classcoral_1_1bus_1_1_slave_agent-members.html  classcoral_1_1bus_1_1_slave_agent.html  classcoral_1_1bus_1_1_slave_control_connection-members.html  classcoral_1_1bus_1_1_slave_control_connection.html  classcoral_1_1bus_1_1_slave_control_messenger_v0-members.html  classcoral_1_1bus_1_1_slave_control_messenger_v0.html  (+341 more)
proto/: CMakeLists.txt  broker.proto  control.proto  domain.proto  domain_controller.proto  exe_data.proto  execution.proto  execution_controller.proto  inproc_rpc.proto  model.proto  net.proto  slave.proto  testing.proto  variable.proto
src/: CMakeLists.txt
src/broker/: CMakeLists.txt  control.cpp  main.cpp  p2p_proxy.cpp  p2p_proxy.hpp  p2p_proxy_test.cpp  proxy.cpp  proxy.hpp  proxy_test.cpp  pubsub.cpp
src/domain_broker/: CMakeLists.txt  main.cpp  p2p_proxy.hpp  p2p_proxy_test.cpp
src/dsb/: CMakeLists.txt  async.cpp  bus_execution_manager_private.cpp  bus_slave_agent.cpp  bus_slave_control_messenger.cpp  bus_slave_control_messenger_v0.cpp  bus_slave_controller.cpp  bus_slave_provider_comm.cpp  bus_slave_setup.cpp  bus_variable_io.cpp  bus_variable_io_test.cpp  domain_controller.cpp  domain_controller_test.cpp  domain_slave_provider.cpp  dsb.cpp  dsb_async.cpp  dsb_async_test.cpp  dsb_bus_domain_data.cpp  dsb_bus_execution_agent.cpp  dsb_bus_execution_manager.cpp  dsb_bus_execution_manager_private.cpp  dsb_bus_execution_state.cpp  dsb_bus_slave_agent.cpp  dsb_bus_slave_control_messenger.cpp  dsb_bus_slave_control_messenger_v0.cpp  dsb_bus_slave_controller.cpp  dsb_bus_slave_provider_comm.cpp  dsb_bus_slave_setup.cpp  dsb_bus_slave_tracker.cpp  dsb_comm.cpp  dsb_comm_helpers.cpp  dsb_comm_helpers_test.cpp  dsb_comm_ip.cpp  dsb_comm_messaging.cpp  dsb_comm_messaging_test.cpp  dsb_comm_p2p.cpp  dsb_comm_p2p_test.cpp  dsb_comm_protobuf.cpp  dsb_comm_protobuf_test.cpp  dsb_comm_proxy.cpp  (+122 more)
src/dsb/dsb/fmi/: glue.hpp  slave.hpp  slave_type.hpp
src/dsb/dsb/protocol/: glue.hpp
src/dsbexec/: CMakeLists.txt  config_parser.cpp  config_parser.hpp  controller.cpp  controller.hpp  library.cpp  library.hpp  main.cpp  mock_library.cpp  mock_library.hpp  model.cpp  model.hpp  model_parse.cpp  model_parser.cpp  model_parser.hpp  slave_handler.cpp  slave_handler.hpp
src/include/coral/: async.hpp  error.hpp  protobuf.hpp  util.hpp
src/include/coral/bus/: execution_manager.hpp  execution_manager_private.hpp  execution_state.hpp  slave_agent.hpp  slave_control_messenger.hpp  slave_control_messenger_v0.hpp  slave_controller.hpp  slave_provider_comm.hpp  slave_setup.hpp
src/include/coral/fmi/: glue.hpp  windows.hpp
src/include/coral/net/: ip.hpp  reactor.hpp  reqrep.hpp  service.hpp  udp.hpp  zmqx.hpp
src/include/coral/protocol/: domain.hpp  exe_data.hpp  execution.hpp  glue.hpp
src/include/coral/util/: console.hpp  zip.hpp
src/include/dsb/: async.hpp  comm.hpp  compat_helpers.hpp  control.hpp  error.hpp  inproc_rpc.hpp  protobuf.hpp  proxy.hpp  sequence.hpp  util.hpp
src/include/dsb/bus/: domain_data.hpp  execution_agent.hpp  execution_manager.hpp  execution_manager_private.hpp  execution_state.hpp  slave_agent.hpp  slave_control_messenger.hpp  slave_control_messenger_v0.hpp  slave_controller.hpp  slave_provider_comm.hpp  slave_setup.hpp  slave_tracker.hpp
src/include/dsb/comm/: error.hpp  helpers.hpp  ip.hpp  messaging.hpp  p2p.hpp  protobuf.hpp  proxy.hpp  reactor.hpp  socket.hpp  udp.hpp  util.hpp
src/include/dsb/fmi/: glue.hpp  slave.hpp  slave_type.hpp
src/include/dsb/fmilib/: fmu.hpp  fmu1.hpp  importcontext.hpp  logger.hpp  streamlogger.hpp
src/include/dsb/net/: ip.hpp  messaging.hpp  reactor.hpp  reqrep.hpp  service.hpp  socket.hpp  udp.hpp  util.hpp  zmqx.hpp
src/include/dsb/protocol/: control.hpp  discovery.hpp  domain.hpp  error.hpp  exe_data.hpp  execution.hpp  glue.hpp  req_rep.hpp
src/include/dsb/slave/: fmi.hpp
src/include/dsb/util/: console.hpp  encoding.hpp  error.hpp  zip.hpp
src/lib/: CMakeLists.txt  async.cpp  async_test.cpp  bus_execution_manager.cpp  bus_execution_manager_private.cpp  bus_execution_state.cpp  bus_slave_agent.cpp  bus_slave_control_messenger.cpp  bus_slave_control_messenger_v0.cpp  bus_slave_controller.cpp  bus_slave_provider_comm.cpp  bus_slave_setup.cpp  bus_variable_io.cpp  bus_variable_io_test.cpp  error.cpp  error_test.cpp  fmi_fmu1.cpp  fmi_fmu1_test.cpp  fmi_fmu2.cpp  fmi_fmu2_test.cpp  fmi_glue.cpp  fmi_importer.cpp  fmi_windows.cpp  log.cpp  master_cluster.cpp  master_execution.cpp  master_execution_test.cpp  model.cpp  net.cpp  net_ip.cpp  net_reactor.cpp  net_reactor_test.cpp  net_reqrep.cpp  net_reqrep_test.cpp  net_service.cpp  net_service_test.cpp  net_test.cpp  net_udp.cpp  net_zmqx_messaging.cpp  net_zmqx_messaging_test.cpp  (+23 more)
src/master/: CMakeLists.txt  config_parser.cpp  config_parser.hpp  main.cpp
src/provider/: CMakeLists.txt  main.cpp
src/slave/: CMakeLists.txt  main.cpp  mock_slaves.cpp  mock_slaves.hpp
src/slave_provider/: CMakeLists.txt  main.cpp
(+879 files in other folders)
